--- a/week4.html
+++ b/week4.html
@@ -4,9 +4,11 @@
 </head>
 <body>
 
-  <h1>B</h1>
+  <h1>Week 4</h1>
   
-  <p>Week 4</p>
+  <p>These are the tasks I completed in Week 4:</p>
+
+  ![Piano roll](/downloads/chocobo_pianoroll.png)
   
 </body>
 </html>
