--- a/week4.html
+++ b/week4.html
@@ -8,7 +8,7 @@
   
   <p>These are the tasks I completed in Week 4:</p>
 
-  ![Piano roll](/Downloads/chocobo_pianoroll.png)
+  ![Piano roll](C:/Users/Laura/Downloads/chocobo_pianoroll.png)
   
 </body>
 </html>
