--- a/week4.html
+++ b/week4.html
@@ -8,7 +8,7 @@
   
   <p>These are the tasks I completed in Week 4:</p>
 
-  ![Piano roll](https://github.com/laurakarron/MCA-2023/blob/master/chocobo_pianoroll.png?raw=true)
+  ![Piano roll](/assets/images/chocobo_pianoroll.png)
   
 </body>
 </html>
