--- a/week4.html
+++ b/week4.html
@@ -8,7 +8,7 @@
   
   <p>These are the tasks I completed in Week 4:</p>
 
-  ![Piano roll](https://laurakarron.github.io/MCA-2023/chocobo_pianoroll.png)
+  <img src="chocobo_pianoroll.png" alt="piano roll"> 
   
 </body>
 </html>
