--- a/week4.html
+++ b/week4.html
@@ -8,7 +8,7 @@
   
   <p>These are the tasks I completed in Week 4:</p>
 
-  <img src="chocobo_pianoroll.png" alt="piano roll" width="500" height="600">
+  <img src="chocobo_pianoroll.png" alt="piano roll">
   
 </body>
 </html>
