--- a/verovio.html
+++ b/verovio.html
@@ -23,6 +23,7 @@
     </style>
 </head>
 <body>
+    |[Week 1](https://github.com/)|[Week 2](https://github.com/)|[Week 3](https://laurakarron.github.io/MCA-2023/verovio.html)|[Week 4](https://github.com/)|[Week 5](https://github.com/)|[Week 7](https://github.com/)|[Week 8](https://github.com/)|[Week 9](https://github.com/)|[Week 10](https://github.com/)|
     <div class="header"><h1>Week 3</h1>
         <p>[Insert your response to task 2 here.]</p></div>
     <div id="app">Verovio is loading...</div>
