--- a/week4.html
+++ b/week4.html
@@ -6,9 +6,17 @@
 
   <h1>Week 4</h1>
   
-  <p>These are the tasks I completed in Week 4:</p>
+  <p>My piano roll:</p>
 
-  <img src="chocobo_pianoroll.png" alt="piano roll" width="500" height="300">
+  <img src="chocobo_pianoroll.png" alt="piano roll" width="600" height="400">
+
+  <p>My scatter plot:</p>
+
+  <img src="chocobo_scatterplot.png" alt="scatter plot" width="600" height="600">
+
+  <p>My histogram:</p>
+
+  <img src="chocobo_histogram.png" alt="histogram" width="600" height="600">
   
 </body>
 </html>
