--- a/week4.html
+++ b/week4.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-  |[Home](https://laurakarron.github.io/MCA-2023/)|
+  <button onclick="https://laurakarron.github.io/MCA-2023/">Home</button> 
   
   <h1>Week 4</h1>
   
