--- a/week4.html
+++ b/week4.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-  <button onclick="https://laurakarron.github.io/MCA-2023/">Home</button> 
+  <a href="https://laurakarron.github.io/MCA-2023">Home</a> 
   
   <h1>Week 4</h1>
   
