--- a/week8.html
+++ b/week8.html
@@ -8,19 +8,19 @@
   
   <p>Metadata associated with 3 audio tracks relating to my theme:</p>
 
-  <img src="metadata_table.png" alt="Metadata associated with 3 audio tracks relating to my theme"
+  <img src="metadata_table.png" alt="Metadata associated with 3 audio tracks relating to my theme" width="700" height="200">
 
   <p>Waveform and spectrogram for Chocobo:</p>
 
-  <img src="chocobo_waveform_spectrogram.png" alt="Waveform and spectrogram for Chocobo"
+  <img src="chocobo_waveform_spectrogram.png" alt="Waveform and spectrogram for Chocobo" width="700" height="400">
   
   <p>Waveform and spectrogram for Victory Fanfare:</p>
 
-  <img src="victoryfanfare_waveform_spectrogram.png" alt="Waveform and spectrogram for Victory Fanfare"
+  <img src="victoryfanfare_waveform_spectrogram.png" alt="Waveform and spectrogram for Victory Fanfare" width="700" height="400">
 
   <p>Waveform and spectrogram for Eternal Harvest:</p>
 
-  <img src="eternalharvest_waveform_spectrogram.png" alt="Waveform and spectrogram for Eternal Harvest"
+  <img src="eternalharvest_waveform_spectrogram.png" alt="Waveform and spectrogram for Eternal Harvest" width="700" height="400">
     
 </body>
 </html>
