--- a/week5.html
+++ b/week5.html
@@ -7,7 +7,11 @@
   <h1>Week 5</h1>
   
   <p>The metadata I added to my MEI file:</p>
-  <p>composer, arranger, editor, publisher, publisher location</p>
+  <p>- composer</p>
+  <p>- arranger</p>
+  <p>- editor</p>
+  <p>- publisher</p>
+  <p>- publisher location</p>
 
   <a href="https://github.com/laurakarron/MCA-2023/blob/master/chocobo_edited_week5.mei">My edited MEI file</a> 
   
