--- a/week1.html
+++ b/week1.html
@@ -5,11 +5,8 @@
 <body>
   <body style="background-color:LightSlateGray;">
     
-
-
-  <h1>Week 1</h1>
-  
-  <p>The theme for my dataset is music from the video game franchise Final Fantasy. I chose this theme because </p>
+  <h1 style="font-family:verdana;">Week 1</h1>
+  <p style="font-family:verdana;">The theme for my dataset is music from the video game franchise Final Fantasy. I chose this theme because </p>
   
 </body>
 </html>
