--- a/week1.html
+++ b/week1.html
@@ -5,8 +5,8 @@
 <body>
   <body style="background-color:LightSlateGray;">
     
-  <h1 style="font-family:Lato;color:white">Week 1</h1>
-  <p style="font-family:Lato;color:white">The theme for my dataset is music from the video game franchise Final Fantasy. I chose this theme because </p>
+  <h1 style="font-family:Calibri;color:white">Week 1</h1>
+  <p style="font-family:Calibri;color:white">The theme for my dataset is music from the video game franchise Final Fantasy. I chose this theme because </p>
   
 </body>
 </html>
