--- a/week2.html
+++ b/week2.html
@@ -3,11 +3,11 @@
 
 </head>
 <body>
+  <body style="background-color:LightSlateGray;">
 
-  <h1>Week 2</h1>
-  
-  <p>My edited MuseScore file: </p>
-  <a href="chocobo_edited.mscz">chocobo</a> 
+  <h1 style="font-family:Calibri;color:white">WEEK 2</h1>
+    
+  <p>My edited MuseScore file can be accessed <a href="chocobo_edited.mscz">here</a>. </p> 
   
 </body>
 </html>
