--- a/week2.html
+++ b/week2.html
@@ -7,7 +7,7 @@
 
   <h1 style="font-family:Calibri;color:white">WEEK 2</h1>
     
-  <p>My edited MuseScore file can be accessed <a href="chocobo_edited.mscz">here</a>. </p> 
+  <p style="font-family:Calibri;color:white">My edited MuseScore file can be accessed <a href="chocobo_edited.mscz">here</a>. </p> 
   
 </body>
 </html>
