--- a/week3.html
+++ b/week3.html
@@ -23,9 +23,8 @@
     </style>
 </head>
 <body>
-    <div class="header"><h1>Week 3</h1>
-        <p>[MusicXML versus MEI:]</p></div>
-        <p>[comparison]</p></div>
+    <body style="background-color:LightSlateGray;">
+    <div class="header"><h1 style="font-family:Calibri;color:white">WEEK 3</h1>
     <div id="app">Verovio is loading...</div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
