--- a/week4.html
+++ b/week4.html
@@ -3,20 +3,21 @@
 
 </head>
 <body>
+  <body style="background-color:LightSlateGray;">
 
   <a href="https://laurakarron.github.io/MCA-2023">Home</a> 
   
-  <h1>Week 4</h1>
+  <h1 style="font-family:Calibri;color:white">WEEK 4</h1>
   
-  <p>My piano roll:</p>
+  <p style="font-family:Calibri;color:white">My piano roll:</p>
 
   <img src="chocobo_pianoroll.png" alt="piano roll" width="600" height="400">
 
-  <p>My scatter plot:</p>
+  <p style="font-family:Calibri;color:white">My scatter plot:</p>
 
   <img src="chocobo_scatterplot.png" alt="scatter plot" width="600" height="600">
 
-  <p>My histogram:</p>
+  <p style="font-family:Calibri;color:white">My histogram:</p>
 
   <img src="chocobo_histogram.png" alt="histogram" width="600" height="600">
   
