--- a/week5.html
+++ b/week5.html
@@ -13,7 +13,7 @@
   <p>- publisher</p>
   <p>- publisher location</p>
 
-  <a href="https://github.com/laurakarron/MCA-2023/blob/master/chocobo_edited_week5.mei">My edited MEI file</a> 
+  <p> My edited MEI file can be accessed <a href="https://github.com/laurakarron/MCA-2023/blob/master/chocobo_edited_week5.mei">here</a>.</p> 
   
 </body>
 </html>
