--- a/week5.html
+++ b/week5.html
@@ -3,17 +3,18 @@
 
 </head>
 <body>
+  <body style="background-color:LightSlateGray;">
 
-  <h1>Week 5</h1>
-  
-  <p>The metadata I added to my MEI file:</p>
-  <p>- composer</p>
-  <p>- arranger</p>
-  <p>- editor</p>
-  <p>- publisher</p>
-  <p>- publisher location</p>
+  <h1 style="font-family:Calibri;color:white">WEEK 5</h1>
+    
+  <p style="font-family:Calibri;color:white">The metadata I added to my MEI file:</p>
+  <p style="font-family:Calibri;color:white">- composer</p>
+  <p style="font-family:Calibri;color:white">- arranger</p>
+  <p style="font-family:Calibri;color:white">- editor</p>
+  <p style="font-family:Calibri;color:white">- publisher</p>
+  <p style="font-family:Calibri;color:white">- publisher location</p>
 
-  <p> My edited MEI file can be accessed <a href="https://github.com/laurakarron/MCA-2023/blob/master/chocobo_edited_week5.mei">here</a>.</p> 
+  <p style="font-family:Calibri;color:white"> My edited MEI file can be accessed <a href="https://github.com/laurakarron/MCA-2023/blob/master/chocobo_edited_week5.mei">here</a>.</p> 
   
 </body>
 </html>
