--- a/week8.html
+++ b/week8.html
@@ -3,22 +3,23 @@
 
 </head>
 <body>
+  <body style="background-color:LightSlateGray;">
 
-  <h1>Week 8</h1>
+  <h1 style="font-family:Calibri;color:white">WEEK 8</h1>
   
-  <p>Metadata associated with 3 audio tracks relating to my theme:</p>
+  <p style="font-family:Calibri;color:white">Metadata associated with 3 audio tracks relating to my theme:</p>
 
   <img src="metadata_table.png" alt="Metadata associated with 3 audio tracks relating to my theme" width="700" height="200">
 
-  <p>Waveform and spectrogram for Chocobo:</p>
+  <p style="font-family:Calibri;color:white">Waveform and spectrogram for Chocobo:</p>
 
   <img src="chocobo_waveform_spectrogram.png" alt="Waveform and spectrogram for Chocobo" width="700" height="400">
   
-  <p>Waveform and spectrogram for Victory Fanfare:</p>
+  <p style="font-family:Calibri;color:white">Waveform and spectrogram for Victory Fanfare:</p>
 
   <img src="victoryfanfare_waveform_spectrogram.png" alt="Waveform and spectrogram for Victory Fanfare" width="700" height="400">
 
-  <p>Waveform and spectrogram for Eternal Harvest:</p>
+  <p style="font-family:Calibri;color:white">Waveform and spectrogram for Eternal Harvest:</p>
 
   <img src="eternalharvest_waveform_spectrogram.png" alt="Waveform and spectrogram for Eternal Harvest" width="700" height="400">
     
