--- a/week9.html
+++ b/week9.html
@@ -3,19 +3,19 @@
 
 </head>
 <body>
- 
-  
-  <h1>Week 9</h1>
-  
-  <p>Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, and Chromagram for Chocobo:</p>
+  <body style="background-color:LightSlateGray;">
+
+  <h1 style="font-family:Calibri;color:white">WEEK 9</h1>
+   
+  <p style="font-family:Calibri;color:white">Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, and Chromagram for Chocobo:</p>
 
   <img src="chocobo_week9.png" alt="Chocobo Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, Chromagram" width="700" height="500">
 
-  <p>Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, and Chromagram for Victory Fanfare:</p>
+  <p style="font-family:Calibri;color:white">Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, and Chromagram for Victory Fanfare:</p>
 
   <img src="victoryfanfare_week9.png" alt="Victory Fanfare Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, Chromagram" width="700" height="500">
 
-  <p>Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, and Chromagram for Eternal Harvest:</p>
+  <p style="font-family:Calibri;color:white">Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, and Chromagram for Eternal Harvest:</p>
 
   <img src="eternalharvest_week9.png" alt="Eternal Harvest Waveform, Spectrogram, Mel Frequency Cepstral Coefficients, Chromagram" width="700" height="500">
   
