--- a/week10.html
+++ b/week10.html
@@ -3,18 +3,19 @@
 
 </head>
 <body>
+  <body style="background-color:LightSlateGray;">
   
-  <h1>Week 10</h1>
+  <h1 style="font-family:Calibri;color:white">WEEK 10</h1>
   
-  <p>Task 1: Similarity</p>
+  <p style="font-family:Calibri;color:white">Task 1: Similarity</p>
 
-  <p>Task 2: Transcription</p>
+  <p style="font-family:Calibri;color:white">Task 2: Transcription</p>
 
-  <p>Original score:</p>
+  <p style="font-family:Calibri;color:white">Original score:</p>
 
   <img src="chocobo_week10_original.png" alt="original score" width="500" height="700">
 
-  <p>Transcribed score:</p>
+  <p style="font-family:Calibri;color:white">Transcribed score:</p>
 
   <img src="chocobo_week10_transcription.png" alt="transcribed score" width="500" height="700">
   
