--- a/week10.html
+++ b/week10.html
@@ -11,11 +11,11 @@
 
   <p style="font-family:Calibri;color:white">Task 2: Transcription</p>
 
-  <p style="font-family:Calibri;color:white">Original score:</p>
+  <p align="left" style="font-family:Calibri;color:white">Original score:</p>
 
   <img align="left" src="chocobo_week10_original.png" alt="original score" width="500" height="700">
 
-  <p style="font-family:Calibri;color:white">Transcribed score:</p>
+  <p align="right" style="font-family:Calibri;color:white">Transcribed score:</p>
 
   <img align="right" src="chocobo_week10_transcription.png" alt="transcribed score" width="500" height="700">
   
