--- a/week10.html
+++ b/week10.html
@@ -13,9 +13,7 @@
 
   <p align="left" style="font-family:Calibri;color:white">Original score:</p> <p align="right" style="font-family:Calibri;color:white">Transcribed score:</p>
 
-  <img align="left" src="chocobo_week10_original.png" alt="original score" width="500" height="700">
-
-  <img align="right" src="chocobo_week10_transcription.png" alt="transcribed score" width="500" height="700">
+  <img align="left" src="chocobo_week10_original.png" alt="original score" width="500" height="700"> <img align="right" src="chocobo_week10_transcription.png" alt="transcribed score" width="500" height="700">
   
 </body>
 </html>
