--- a/week10.html
+++ b/week10.html
@@ -7,9 +7,9 @@
   
   <h1 style="font-family:Calibri;color:white">WEEK 10</h1>
   
-  <p style="font-family:Calibri;color:white">Task 1: Similarity</p>
+  <b style="font-family:Calibri;color:white">Task 1: Similarity</b>
 
-  <p style="font-family:Calibri;color:white">Task 2: Transcription</p>
+  <b style="font-family:Calibri;color:white">Task 2: Transcription</b>
 
   <p align="left" style="font-family:Calibri;color:white">Original score:</p> <p align="right" style="font-family:Calibri;color:white">Transcribed score:</p>
 
