--- a/week2.html
+++ b/week2.html
@@ -8,6 +8,8 @@
   <h1 style="font-family:Calibri;color:white">WEEK 2</h1>
     
   <p style="font-family:Calibri;color:white">My edited MuseScore file can be accessed <a href="chocobo_edited.mscz">here</a>. </p> 
+  <p style="font-family:Calibri;color:white">The main problem that I noticed with my initial transcription was the time signature: the OMR engine transcribed the score as 2/2 at first so I had to change it to 4/4 myself. I also had to fix the stems and beams of some notes. </p> 
+
   
 </body>
 </html>
