--- a/week7.html
+++ b/week7.html
@@ -7,6 +7,7 @@
   <script src="js/CETEI.js"></script>
 </head>
 <body>
+  <body style="background-color:LightSlateGray;">
   <div id="MEImeta"></div>
   <div id="app">Verovio is loading...</div>
   <script type="module">
@@ -65,5 +66,5 @@
     })
   </script>
 </body>
-<footer><p>Score rendering provided by <a href="http://www.verovio.org">Verovio</a>. Metadata rendered by <a href="https://github.com/TEIC/CETEIcean/"> CETEIcean</a>.</p></footer>
+<footer><p style="font-family:Calibri;color:white">Score rendering provided by <a href="http://www.verovio.org">Verovio</a>. Metadata rendered by <a href="https://github.com/TEIC/CETEIcean/"> CETEIcean</a>.</p></footer>
 </html>
