--- a/week7.html
+++ b/week7.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <body style="background-color:LightSlateGray;">
+    <h1 style="font-family:Calibri;color:white">WEEK 7</h1>
   <div id="MEImeta"></div>
   <div id="app">Verovio is loading...</div>
   <script type="module">
