--- a/week10.html
+++ b/week10.html
@@ -7,6 +7,8 @@
   
   <h1 style="font-family:Calibri;color:white">WEEK 10</h1>
 
+  <p style="font-family:Calibri;color:white"> The transcribed score on the right is quite difficult to make sense of as the barlines have changed and shifted everything as a result. Most of the notes also seem to be in the wrong positions. The transcription also added various elements that are not there in the original score. Ultimately, the transcription was not successful as it is very hard to read. It is possible that something happened to the data in the process of changing file types. </p>
+
   <p align="left" style="font-family:Calibri;color:white">Original score:</p> <p align="right" style="font-family:Calibri;color:white">Transcribed score:</p>
 
   <img align="left" src="chocobo_week10_original.png" alt="original score" width="500" height="700"> <img align="right" src="chocobo_week10_transcription.png" alt="transcribed score" width="500" height="700">
