--- a/week1.html
+++ b/week1.html
@@ -10,6 +10,8 @@
   <p style="font-family:Calibri;color:white">The theme for my dataset is music from the video game franchise Final Fantasy. I chose this theme because there is a huge selection of scores to choose from across the 16 games in the franchise and I think that video game soundtracks would be interesting to analyse. It will also be easy to locate and work with these audio recordings as older video game music is often in the MIDI format.</p>
     
   <p style="font-family:Calibri;color:white">One challenge that might come up when working with my data might be locating accurate scores as rather than official scores, video game music is often only noted down and arranged by fans. More generally, finding scores that are easy to work with can be difficult as some programs can struggle with reading information from older scores as well as handwritten ones. </p>
+
+  <p style="font-family:Calibri;color:white">Another general challenge </p>
     
 </body>
 </html>
